maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:16: error: illegal start of simple expression
  }}
  ^RandomMouseMaze:16: error: 'while' expected but '}' found.
  }}
   ^